--- a/extension/popup.html
+++ b/extension/popup.html
@@ -4,7 +4,8 @@
   <title>Bookmark Sync</title>
 </head>
 <body>
-  <button id="sync">Sync Now</button>
+  <button id="get">Get bookmarks</button>
+  <button id="set">Set bookmarks</button>
   <script src="popup.js"></script>
 </body>
 </html>
