--- a/extension/popup.html
+++ b/extension/popup.html
@@ -4,8 +4,7 @@
   <title>Bookmark Sync</title>
 </head>
 <body>
-  <button id="get">Get bookmarks</button>
-  <button id="set">Set bookmarks</button>
+  <button id="sync">Sync bookmarks</button>
   <script src="popup.js"></script>
 </body>
 </html>
