--- a/extension/popup.html
+++ b/extension/popup.html
@@ -2,9 +2,51 @@
 <html>
 <head>
   <title>Bookmark Sync</title>
+  <style>
+    fieldset {
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      margin-bottom: 4px;  /* reduced from 8px */
+      padding: 8px;
+    }
+    legend {
+      padding: 0 8px;
+      font-weight: bold;
+    }
+    .form-group {
+      margin-bottom: 4px;  /* reduced from 8px */
+      display: flex;
+      align-items: center;
+    }
+    .form-group label {
+      flex: 0 0 120px;
+      margin-right: 8px;
+      text-align: right;
+    }
+    .form-group input {
+      flex: 1;
+      padding: 8px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    button#sync {
+      margin-top: 4px;  /* reduced from 8px */
+    }
+  </style>
 </head>
 <body>
-  <button id="sync">Sync bookmarks</button>
-  <script src="popup.js"></script>
+<fieldset>
+  <legend>Server connection</legend>
+  <div class="form-group">
+    <label for="server-url">Server URL:</label>
+    <input type="url" id="server-url" name="server-url" placeholder="https://example.com">
+  </div>
+  <div class="form-group">
+    <label for="server-password">Password:</label>
+    <input type="password" id="server-password" name="server-password" placeholder="Enter password">
+  </div>
+</fieldset>
+<button id="sync">Sync bookmarks</button>
+<script src="popup.js"></script>
 </body>
 </html>
