Support auto browser dark/light mode

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -3,6 +3,21 @@
 <head>
   <title>Bookmark Sync</title>
   <style>
+    @media (prefers-color-scheme: dark) {
+      body {
+        background: #222;
+        color: #eee;
+      }
+      /* Add other dark mode styles here */
+    }
+
+    @media (prefers-color-scheme: light) {
+      body {
+        background: #fff;
+        color: #111;
+      }
+      /* Add other light mode styles here */
+    }
     fieldset {
       border: 1px solid #ddd;
       border-radius: 4px;
