--- a/extension/popup.html
+++ b/extension/popup.html
@@ -10,7 +10,6 @@
       }
       /* Add other dark mode styles here */
     }
-
     @media (prefers-color-scheme: light) {
       body {
         background: #fff;
@@ -53,6 +52,12 @@
       border-radius: 4px;
       background: #f9f9f9;
     }
+    .error {
+      color: #f00;
+      font-size: 0.9em;
+      margin-top: 2px;
+      display: none;
+    }
   </style>
 </head>
 <body>
@@ -60,7 +65,13 @@
   <legend>Server connection</legend>
   <div class="form-group">
     <label for="server-url">Server URL:</label>
-    <input type="url" id="server-url" name="server-url" placeholder="https://example.com">
+    <input
+            type="url"
+            id="server-url"
+            name="server-url"
+            placeholder="https://example.com"
+            required
+    >
   </div>
   <div class="form-group">
     <label for="server-password">Password:</label>
@@ -74,6 +85,9 @@
     >
   </div>
 </fieldset>
+<div id="errorBox" class="error" style="display: none; color: red; font-size: 0.9em; margin-top: 2px;">
+  Please enter a valid URL (e.g., https://example.com)
+</div>
 <button id="sync">Sync bookmarks</button>
 <div id="footnote" style="text-align: right; font-size: 0.8em; margin-top: 12px; color: #666;"></div>
 <script src="popup.js"></script>
