--- a/extension/popup.html
+++ b/extension/popup.html
@@ -4,59 +4,41 @@
   <title>Bookmark Sync</title>
   <style>
     @media (prefers-color-scheme: dark) {
-      body {
-        background: #222;
-        color: #eee;
-      }
-      /* Add other dark mode styles here */
+      body { background: #222; color: #eee; }
     }
     @media (prefers-color-scheme: light) {
-      body {
-        background: #fff;
-        color: #111;
-      }
-      /* Add other light mode styles here */
+      body { background: #fff; color: #111; }
     }
     fieldset {
       border: 1px solid #ddd;
       border-radius: 4px;
       margin-bottom: 4px;
-      padding: 8px;
-      width: 350px;
+      padding: 4px;
     }
     legend {
-      padding: 0 8px;
+      padding: 0 4px;
       font-weight: bold;
     }
     .form-group {
       margin-bottom: 4px;
+      display: flex;
+      align-items: center;
     }
     .form-group label {
-      display: block;
-      margin-bottom: 2px;
-      font-weight: bold;
+      /* Left-align the label */
+      flex: 0 0 120px;
+      text-align: left; /* Changed from right to left */
+      margin-right: 4px;
     }
     .form-group input {
-      display: block;
-      width: 100%;
-      padding: 8px;
+      flex: 1;
+      padding: 4px;
       border: 1px solid #ccc;
       border-radius: 4px;
-      box-sizing: border-box;
     }
     button#sync {
       margin-top: 4px;
-      width: 100%;
-      padding: 8px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      background: #f9f9f9;
-    }
-    .error {
-      color: #f00;
-      font-size: 0.9em;
-      margin-top: 2px;
-      display: none;
+      height: 24px;
     }
   </style>
 </head>
@@ -65,24 +47,11 @@
   <legend>Server connection</legend>
   <div class="form-group">
     <label for="server-url">Server URL:</label>
-    <input
-            type="url"
-            id="server-url"
-            name="server-url"
-            placeholder="https://example.com"
-            required
-    >
+    <input type="url" id="server-url" name="server-url" placeholder="https://example.com">
   </div>
   <div class="form-group">
     <label for="server-password">Password:</label>
-    <input
-            type="password"
-            id="server-password"
-            name="server-password"
-            placeholder="Enter password"
-            minlength="8"
-            required
-    >
+    <input type="password" id="server-password" name="server-password" placeholder="Enter password">
   </div>
 </fieldset>
 <div id="errorBox" class="error" style="display: none; color: red; font-size: 0.9em; margin-top: 2px;">
