--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bookmark Sync</title>
+  <title>Clipsync</title>
   <style>
     @media (prefers-color-scheme: dark) {
       body { background: #222; color: #eee; }
