--- a/extension/popup.html
+++ b/extension/popup.html
@@ -50,6 +50,10 @@
     <input type="url" id="server-url" name="server-url" placeholder="https://example.com">
   </div>
   <div class="form-group">
+    <label for="server-username">Email:</label>
+    <input type="email" id="server-username" name="server-username" placeholder="Enter email address">
+  </div>
+  <div class="form-group">
     <label for="server-password">Password:</label>
     <input type="password" id="server-password" name="server-password" placeholder="Enter password">
   </div>
