--- a/extension/popup.html
+++ b/extension/popup.html
@@ -44,7 +44,7 @@
 </head>
 <body>
 <fieldset>
-  <legend>Server connection</legend>
+  <legend id="legend">Server connection</legend>
   <div class="form-group">
     <label for="server-url">Server URL:</label>
     <input type="url" id="server-url" name="server-url" placeholder="https://example.com">
@@ -62,7 +62,6 @@
   Please enter a valid URL (e.g., https://example.com)
 </div>
 <button id="sync">Sync bookmarks</button>
-<div id="footnote" style="text-align: right; font-size: 0.8em; margin-top: 12px; color: #666;"></div>
 <script src="popup.js"></script>
 </body>
 </html>
